--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,4 +1,4 @@
 <section class="container">
-    <app-map></app-map>
+    <app-map *ngIf="mapProperties" [mapProperties]="mapProperties"></app-map>
     <app-list></app-list>
 </section>
