Made quite a bit of changes: I have results showing up, I just need to mess with the list and map panning and updating

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,1 +1,7 @@
-<p>list works!</p>
+<section *ngIf="parkList" class="listContainer">
+    <ul>
+        <li *ngFor="let list of parkList">
+            {{ list.name }}
+        </li>
+    </ul>
+</section>
