Forgot to include the marker reference in my park list model and injection into the list and list-item components

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="parkList" class="listContainer">
-    <ul>
-        <li *ngFor="let list of parkList">
-            {{ list.name }}
-        </li>
-    </ul>
+    <app-list-item
+        *ngFor="let list of parkList"
+        [list]="list"
+        [name]="list.result.name"
+    ></app-list-item>
 </section>
