Making some changes to how the map moves around when interacting with the markers or list items

--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,5 +1,5 @@
-<div class="listItem">
+<button class="listItem" (click)="onClickItem(listItem)">
     <h3>
         {{ name }}
     </h3>
-</div>
+</button>
