--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -1,7 +1,10 @@
 .container {
-    background-color: papayawhip;
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
+
+    @media screen and (min-width: 1000px) {
+        flex-direction: row-reverse;
+    }
 }
