--- a/src/app/components/list-item/list-item.component.scss
+++ b/src/app/components/list-item/list-item.component.scss
@@ -1,7 +1,18 @@
 .listItem {
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px 5px;
+    text-align: left;
     width: 100%;
 
     &:hover {
-        background-color: #a3a3a3;
+        background-color: #c4c2c2;
+        color: rgb(43, 43, 43);
+    }
+
+    &:focus {
+        background-color: #e4e4e4;
+        outline: none;
     }
 }
