Abstracted some stuff and added a sass config to import some colors

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -4,5 +4,5 @@
         [mapProperties]="mapProperties"
         (notifyMapChange)="onChildMapChange($event)"
     ></app-map>
-    <app-list *ngIf="parkList" [parkList]="parkList"></app-list>
+    <app-list [parkList]="parkList"></app-list>
 </section>
